# WordScript

./: .gitignore  API_LIMITS.md  BUILD_ID  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VISION.md  WordScript.spec  build-sidecar.ps1  build-sidecar.sh  build_info.json  config.example.json  index.html  package-lock.json  package.json  requirements.txt  setup-tauri.ps1  setup-tauri.sh  setup.ps1  setup.sh  speech_to_text.py  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md
hooks/: pre-commit
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/settings/: AboutTab.tsx  AiAssistantTab.tsx  ApiModelsTab.tsx  GeneralTab.tsx  HotkeyRecorder.tsx  InputTab.tsx  PromptsTab.tsx
src/hooks/: useSidecar.ts
src/styles/: globals.css  overlay.css  settings.css
src/types/: ipc.ts
src/windows/: OverlayWindow.tsx  SettingsWindow.tsx
wordscript/: __init__.py  __main__.py  app.py  config.py  constants.py  hotkey.py  ipc.py  paster.py  recorder.py  sidecar.py  sounds.py  transcription.py  tray.py  updater.py
wordscript/ui/: __init__.py  overlay.py  settings.py  theme.py  widgets.py
