[package]
name = "wordscript"
version = "0.2.0-alpha"
description = "WordScript — lightweight speech-to-text desktop utility"
authors = []
license = "MIT"
repository = "https://github.com/felixontv/WordScript"
edition = "2021"

[lib]
name = "wordscript_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "wordscript"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri       = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }

[features]
# This feature is used for production builds or when a dev server is not specified.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Smaller binary; LTO also helps
opt-level   = "s"
lto         = true
strip       = true
codegen-units = 1
panic       = "abort"
